fix: shift enter error

--- a/src/components/SearchResult/SearchResult.module.css
+++ b/src/components/SearchResult/SearchResult.module.css
@@ -49,7 +49,7 @@
   margin: 0 auto;
   margin-bottom: 10px;
   padding: var(--spacing-base) var(--spacing-sm);
-  border: 1px solid var(--color-normal-blue);
+  border: 1px solid var(--color-deep-blue);
   border-radius: 15px;
   box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
   cursor: pointer;
@@ -88,7 +88,7 @@
 }
 .highlight {
   font-weight: 800;
-  color: var(--color-normal-blue);
+  color: var(--color-deep-blue);
 }
 
 /* 커스텀 스크롤바 스타일링 제거 */
